seedboxk8s/applications/bridgetroll/Deployment.dex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  namespace: bridgetroll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
    spec:
      serviceAccountName: dex
      containers:
      - name: dex
        image: docker.io/dexidp/dex:latest@sha256:70fbdd07f990ca00dc239bb9c7ef866914c5d7ea5cf10ea6ac4e8780d37738d9
        command: ['dex', 'serve', '/etc/dex/config.yaml']
        ports:
        - containerPort: 5556
        volumeMounts:
        - name: dexconfig
          mountPath: /etc/dex
        - name: mindcontrol-theme
          mountPath: /srv/dex/web/themes/mindcontrol
      volumes:
      - name: dexconfig
        configMap:
          name: dexconfig
      - name: mindcontrol-config
        configMap:
          name: dex-theme-mindcontrol
      - name: mindcontrol-theme
        emptyDir: {}
