seedboxk8s/applications/bridgetroll/Deployment.tfa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfa
  namespace: bridgetroll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tfa
  template:
    metadata:
      labels:
        app: tfa
    spec:
      containers:
        - image: docker.io/thomseddon/traefik-forward-auth:2@sha256:69a2c985d2c518b6f0e77161a98628a148a5d964e4e84fc52cc62e19bb4da634
          name: tfa
          ports:
            - containerPort: 4181
