seedboxk8s/applications/bridgetroll/Service.dex.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: bridgetroll
spec:
  ports:
  - port: 5556
    targetPort: 5556
  selector:
    app: dex
