seedboxk8s/applications/bridgetroll/Service.tfa.yaml
apiVersion: v1
kind: Service
metadata:
  name: tfa
  namespace: bridgetroll
  labels:
    app: tfa
spec:
  ports:
  - port: 4181
    targetPort: 4181
  selector:
    app: tfa
