seedboxk8s/applications/bridgetroll/IngressRoute.dex.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dex
  namespace: bridgetroll
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dex.${productionClusterFqdn}`)
    kind: Rule
    services:
    - name: dex
      port: 5556
  tls:
    secretName: seedbox-wildcard-backing-secret
